src/card-stack.scss
.deck-player-card-stack {
	height: 14em;
	display: flex;
	flex-direction: row-reverse;
	justify-content: flex-end;
	position: relative;
	&-control {
		position: absolute;
		z-index: 10;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		cursor: pointer;
		&-action {
			cursor: pointer;
		}
		&-actions {
			padding: 0.2em 0;
			display: flex;
			width: 100%;
			justify-content: space-around;
			visibility: hidden;
		}
		&:hover > &-actions {
			visibility: inherit;
		}
		&-untapped {
			height: 17em;
			width: 10.1em;
			margin-top:-1.5em;
			&-button {
				height: 14em;
				width: 10.1em;
			}
		}
		&-tapped {
			left: 10.1em;
			right: 0;
			margin-top: 2.6em;
			width: auto;
			&-button {
				height: 10.1em;
			}
		}
	}
	&-item {
		height: 14em;
		width: 10.1em;
		border-radius: 0.4em;
		&-untapped {
			margin-right: -8.5em;
			transform: rotate(0);
		}
		&-tapped {
			margin-top:-14em;
			margin-right:-8.5em;
			transform: rotate(90deg) translateX(4em);
			transform-origin: bottom left;
		}
	}
}

